git revert、NoSuchMethodError special solution